--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.2|^8.0",
-        "spatie/laravel-permission": "^3.0|^4.0"
+        "laravel/nova": "^3.0",
+        "spatie/laravel-permission": "^3.0|^4.0|^5.0"
     },
     "autoload": {
         "psr-4": {
